vault: 2026-09-22 production deploy of RE Assignment